# BulmagesPlus_Edison

./: README.md
bulmagesplus/bulmafact/plugins/pluginbf_cliente/: CMakeLists.txt  clientebase.ui  clienteview.cpp  clienteview.h  clientslist.cpp  clientslistbase.ui  pluginbf_cliente.cpp
bulmagesplus/bulmafact/plugins/pluginbf_cliente/po/: pluginbf_cliente_es_ES.po
bulmagesplus/bulmafact/plugins/pluginbf_clientealbaran/: CMakeLists.txt  albaranclientebase.ui  albaranclientelist.cpp  albaranclientelistbase.ui  albaranclienteview.cpp  bfclientealbarandescuentosubform.cpp  bfclientealbaransubform.cpp  genalbqtoolbutton.cpp  genalbqtoolbutton.h  pluginbf_clientealbaran.cpp
bulmagesplus/bulmafact/plugins/pluginbf_clientealbaran/po/: pluginbf_clientealbaran_es_ES.po
bulmagesplus/bulmafact/plugins/pluginbf_clientecobro/: CMakeLists.txt  cobrobase.ui  cobroslist.cpp  cobroslist.h  cobroslistbase.ui  cobroview.cpp  impqtoolbutton.cpp  pluginbf_clientecobro.cpp
bulmagesplus/bulmafact/plugins/pluginbf_clientecobro/po/: pluginbf_clientecobro_es_ES.po
bulmagesplus/bulmafact/plugins/pluginbf_clientefactura/: CMakeLists.txt  facturabase.ui  facturaslist.cpp  facturaslistbase.ui  facturaview.cpp  facturaview.h  genfacqtoolbutton.cpp  genfacqtoolbutton.h  listdescfacturaview.cpp  listlinfacturaview.cpp  listlinfacturaview.h  pluginbf_clientefactura.cpp
bulmagesplus/bulmafact/plugins/pluginbf_clientefactura/po/: pluginbf_clientefactura_es_ES.po
bulmagesplus/bulmafact/plugins/pluginbf_clientepedido/: CMakeLists.txt  genpedqtoolbutton.cpp  genpedqtoolbutton.h  listdescpedidoclienteview.cpp  listlinpedidoclienteview.cpp  pedidoclientebase.ui  pedidoclienteview.cpp  pedidosclientelist.cpp  pedidosclientelistbase.ui
bulmagesplus/bulmafact/plugins/pluginbf_clientepedido/po/: pluginbf_clientepedido_es_ES.po
bulmagesplus/bulmafact/plugins/pluginbf_clientepresupuesto/: CMakeLists.txt  genpreqtoolbutton.cpp  listdescpresupuestoview.cpp  listlinpresupuestoview.cpp  presupuestoclientebase.ui  presupuestolist.cpp  presupuestolist.h  presupuestoslistbase.ui  presupuestoview.cpp
bulmagesplus/bulmafact/plugins/pluginbf_clientepresupuesto/po/: pluginbf_clientepresupuesto.pot  pluginbf_clientepresupuesto_es_ES.po
bulmagesplus/bulmafact/src/: CMakeLists.txt  bfaboutbase.ui  bfaboutview.cpp  bfaboutview.h  bfbulmafact.cpp  bfbulmafact.h  bfbulmafactbase.ui  bfbuscaralmacen.cpp  bfbuscaralmacen.h  bfbuscararticulo.cpp  bfbuscararticulo.h  bfbuscarbanco.cpp  bfbuscarbanco.h  bfbuscarfamilia.cpp  bfbuscarfamilia.h  bfbuscarformapago.cpp  bfbuscarformapago.h  bfbuscarreferencia.cpp  bfbuscarreferencia.h  bfbuscarregimenfiscal.cpp  bfbuscarregimenfiscal.h  bfbuscarseriefactura.cpp  bfbuscarseriefactura.h  bfbuscartipoarticulo.cpp  bfbuscartipoarticulo.h  bfbuscartipoiva.cpp  bfbuscartipoiva.h  bfbuscartrabajador.cpp  bfbuscartrabajador.h  bfcompany.cpp  bfcompany.h  bfconfiguracionbase.ui  bfconfiguracionview.cpp  bfconfiguracionview.h  bfform.cpp  bfform.h  bfinformecliente.cpp  bfinformecliente.h  bfproveedoralbaransubform.cpp  bfproveedoralbaransubform.h  (+7 more)
bulmagesplus/bulmafact/src/po/: bulmafact_es_ES.po
bulmagesplus/bulmalib/src/: CMakeLists.txt  blaction.cpp  blaction.h  blapimessage.cpp  blapimessage.h  blapiserver.cpp  blapiserver.h  blapiserverworker.cpp  blapiserverworker.h  blapplication.cpp  blapplication.h  blargparser.cpp  blargparser.h  blbankedit.cpp  blbankedit.h  blbankeditbase.ui  blbannerbar.cpp  blbannerbar.h  blclickablelabel.cpp  blclickablelabel.h  blcombobox.cpp  blcombobox.h  blcomboboxdelegate.cpp  blcomboboxdelegate.h  blcompanydialog.cpp  blcompanydialog.h  blcompanydialogbase.ui  blconfig.h.in  blconfiguration.cpp  blconfiguration.h  blcountrybase.ui  blcountryview.cpp  blcountryview.h  bldatedelegate.cpp  bldatedelegate.h  bldatelineedit.cpp  bldatelineedit.h  bldatesearch.cpp  bldatesearch.h  bldb.cpp  (+107 more)
bulmagesplus/bulmalib/src/po/: bulmalib_ca_ES.po  bulmalib_en_US.po  bulmalib_es_ES.po  bulmalib_fr_FR.po
